2003-09-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-open-all-links-in-new-session): Improve the regexp.
	(w3m-examine-command-line-args): Don't let it misunderstand the
	next command as a url string; modify the arguments in
	`command-line-args' instead of removing them.

2003-09-21  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-open-all-links-in-new-session): Don't use
	`w3m-select-buffer'.

2003-09-21  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-popup-frame-p): Make it accept the `interactive-p'
	argument.
	(w3m-examine-command-line-args): New function.
	(w3m): Use it.

2003-09-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-favicon.el: Bind some external variables when compiling.

2003-09-19  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m-form.el (w3m-form-make-form-data): Insert "--" before the
	multipart post boundary.

2003-09-19  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-underline-face): New face.
	(w3m-strike-through-face): New user variable.
	(w3m-fontify-strike-through): New function.
	(w3m-fontify): Call `w3m-fontify-strike-through'

2003-09-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-favicon.el (w3m-setup-favicon): Convert favicon data to an
	image for the about: pages using `w3m-convert-favicon'.
	(w3m-buffer-favicon): Move the data conversion procedure to
	`w3m-convert-favicon'.
	(w3m-convert-favicon): New function detached from
	`w3m-buffer-favicon'; make it work synchronously.
	(w3m-retrieve-favicon): Convert favicon data to an image.

	* w3m-image.el (w3m-imagick-convert-buffer): Erase buffer before
	calling the convert program.

	* w3m.el (w3m-buffer-setup): Modify the value for
	`mode-line-buffer-identification' in order to make it possible to
	show favicon under XEmacs.

2003-09-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-open-all-links-in-new-session): New function.
	Suggested by Yoichi NAKAYAMA <yoichi@geiin.org>.
	(w3m-view-this-url-new-session): Call